@@ -230,6 +230,7 @@ Scott David Daniels
 Ben Darnell
 Kushal Das
 Jonathan Dasteel
+A. Jesse Jiryu Davis
 John DeGood
 Ned Deily
 Vincent Delft
